erDiagram
    Users ||--|| Company : "has profile"
    Users ||--|| Transport : "has profile"
    Company ||--o{ Shipment : "creates"
    Transport ||--o{ Shipment : "handles"
    Shipment ||--o{ TrackingEvent : "has"
    Shipment ||--o{ ShipmentItem : "contains"
    Users ||--o{ TrackingEvent : "creates"
    
    Users {
        int id PK
        string email UK
        string password_hash
        string user_type
        datetime created_at
        datetime updated_at
        boolean is_active
    }
    
    Company {
        int id PK
        int user_id FK "UK"
        string company_name
        string registration_number UK
        string address
        string phone
        string contact_person
        datetime created_at
        datetime updated_at
    }
    
    Transport {
        int id PK
        int user_id FK "UK"
        string company_name
        string registration_number UK
        string fleet_size
        string license_number UK
        string address
        string phone
        string contact_person
        datetime created_at
        datetime updated_at
    }
    
    Shipment {
        int id PK
        string tracking_number UK
        int company_id FK
        int transport_id FK
        string origin_address
        string destination_address
        datetime pickup_date
        datetime estimated_delivery
        datetime actual_delivery
        string status
        decimal total_weight
        string priority
        text notes
        datetime created_at
        datetime updated_at
    }
    
    ShipmentItem {
        int id PK
        int shipment_id FK
        string item_name
        string description
        int quantity
        decimal weight
        string unit
        decimal value
        string sku
        datetime created_at
    }
    
    TrackingEvent {
        int id PK
        int shipment_id FK
        string event_type
        string location
        text description
        int created_by_user_id FK
        datetime event_timestamp
        datetime created_at
    }
